--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,14 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+# OSX noise
+.DS_Store
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# IntelliJ stuff
+*.iml
+.idea/
+.ipr
+out
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
